fix(api): fix 500 errors caused by IOExceptions on locked files
